[VCDA-3048] read and write operations for vm extra config working extra config, testing cluster creation Cloudinit debugging Use go embed for cluster scripts Copied vcdswaggerclient from CPI added vm phase logging Make CPI, CSI work using public url for public repo and restored common_system_test removed logging config
Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

--- a/testdata/config_test.yaml
+++ b/testdata/config_test.yaml
@@ -1,8 +1,8 @@
 vcd:
-  host: "https://bos1-vcloud-static-173-219.eng.vmware.com"
+  host: "https://vmc-vcloud-dhcp-169-27.eng.vmware.com"
   org: "org1"
   vdc: "ovdc1"
-  user: "administrator"
+  user: "clusterauthor1"
   secret: "ca$hc0w"
   network: "ovdc1_nw"
   vipSubnet: "10.150.191.253/19"
