Create and Delete RDE in vcd cluster controller
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -16,7 +16,7 @@ spec:
         control-plane: controller-manager
     spec:
       securityContext:
-        runAsNonRoot: true
+        runAsNonRoot: false
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
