--- a/controllers/cluster_scripts/cloud_init_control_plane.yaml
+++ b/controllers/cluster_scripts/cloud_init_control_plane.yaml
@@ -6,9 +6,9 @@ write_files:
     ---
     apiVersion: v1
     data:
-      username: %s
-      password: %s
-      refreshToken: ""
+      username: "%s"
+      password: "%s"
+      refreshToken: "%s"
     kind: Secret
     metadata:
       name: vcloud-basic-auth
