CR of Sahithi, Aniruddha

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -71,6 +71,9 @@ spec:
                 type: string
             required:
             - context
+            - org
+            - ovdc
+            - ovdcNetwork
             - site
             type: object
           status:
