add is management cluster flag
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -1,3 +1,4 @@
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -79,7 +80,7 @@ spec:
           status:
             description: VCDClusterStatus defines the observed state of VCDCluster
             properties:
-              clusterRDEId:
+              RDEId:
                 type: string
               conditions:
                 description: Conditions defines current service state of the VCDCluster.
