--- a/controllers/cluster_scripts/cloud_init_control_plane.yaml
+++ b/controllers/cluster_scripts/cloud_init_control_plane.yaml
@@ -46,16 +46,6 @@ write_files:
       sed -i 's/::1/127.0.0.1/g' /etc/hosts || true
     vmtoolsd --cmd "info-set guestinfo.postcustomization.networkconfiguration.status successful"
 
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.store.sshkey.status in_progress"
-      ssh_key="%s"
-      if [[ ! -z "$ssh_key" ]];
-      then
-        mkdir -p /root/.ssh
-        echo $ssh_key >> /root/.ssh/authorized_keys
-        chmod -R go-rwx /root/.ssh
-      fi
-    vmtoolsd --cmd "info-set guestinfo.postcustomization.store.sshkey.status successful"
-
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeinit.status in_progress"
       for image in "coredns" "etcd" "kube-proxy" "kube-apiserver" "kube-controller-manager" "kube-scheduler"
       do
@@ -64,7 +54,7 @@ write_files:
         new_tag_version=$(echo $image_ref | sed 's/.*://' | sed 's/_/-/')
         ctr -n=k8s.io image tag $image_ref $ref_path:$new_tag_version
       done
-      %s
+      __JINJA_RUNCMD_REPLACE_ME__
       export KUBECONFIG=/etc/kubernetes/admin.conf
       kubectl get po -A -owide
     vmtoolsd --cmd "info-set guestinfo.kubeconfig $(cat /etc/kubernetes/admin.conf | base64 | tr -d '\n')"
@@ -121,5 +111,5 @@ runcmd:
 timezone: UTC
 disable_root: false
 preserve_hostname: false
-hostname: %s
+hostname: "%s"
 final_message: "The system is ready after $UPTIME seconds"
