reverted config_test.yaml
Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

--- a/testdata/config_test.yaml
+++ b/testdata/config_test.yaml
@@ -4,7 +4,7 @@ vcd:
   vdc: "ovdc"
   user: "user"
   secret: "password"
-  network: "ovdc1nw"
+  network: "ovdc_nw"
   vipSubnet: "vipSubnet"
 loadbalancer:
   oneArm:
