--- a/config/manager/controller_manager_config.yaml
+++ b/config/manager/controller_manager_config.yaml
@@ -13,3 +13,7 @@ loadbalancer:
     https: 443
     tcp: 6443
 managementClusterRDEId: MANGEMENT_CLUSTER_RDE_ID
+clusterResourceSet:
+  csi: CSI_VERSION
+  cpi: CPI_VERSION
+  cni: ANTREA_VERSION
