--- a/testdata/config_test.yaml
+++ b/testdata/config_test.yaml
@@ -1,11 +1,11 @@
 vcd:
-  host: "https://vcd-url.com"
-  org: "org"
-  vdc: "ovdc"
-  user: "user"
-  secret: "password"
-  network: "ovdc_nw"
-  vipSubnet: "vipSubnet"
+  host: "https://bos1-vcloud-static-166-165.eng.vmware.com"
+  org: "org1"
+  vdc: "ovdc1"
+  user: "clusteradmin"
+  secret: "ca$hc0w"
+  network: "ovdc1_nw"
+  vipSubnet: "10.150.191.253/19"
 loadbalancer:
   oneArm:
     startIP: "192.168.8.2"
@@ -14,3 +14,7 @@ loadbalancer:
     http: 80
     https: 443
     tcp: 6443
+clusterResourceSet:
+  csi: 1.0.0
+  cpi: 1.0.0
+  cni: 0.11.3
