Add rights for kubeadmconfigtemplate verbs
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -139,3 +139,15 @@ rules:
     - patch
     - update
     - watch
+- apiGroups:
+    - bootstrap.cluster.x-k8s.io
+  resources:
+    - kubeadmconfigtemplates
+  verbs:
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
