--- a/controllers/cluster_scripts/cloud_init_control_plane.yaml
+++ b/controllers/cluster_scripts/cloud_init_control_plane.yaml
@@ -84,16 +84,16 @@ write_files:
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cpi.install.status successful"
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.csi.install.status in_progress"
-      wget -O $vcloud_csi_configmap_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/main/manifests/vcloud-csi-config.yaml
+      wget -O $vcloud_csi_configmap_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/1.0.0/manifests/vcloud-csi-config.yaml
       sed -i 's/VCD_HOST/"%s"/' $vcloud_csi_configmap_path
       sed -i 's/ORG/"%s"/' $vcloud_csi_configmap_path
       sed -i 's/OVDC/"%s"/' $vcloud_csi_configmap_path
       sed -i 's/VAPP/%s/' $vcloud_csi_configmap_path
       sed -i 's/CLUSTER_ID/"%s"/' $vcloud_csi_configmap_path
       kubectl apply -f $vcloud_csi_configmap_path
-      wget -O $csi_driver_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/main/manifests/csi-driver.yaml
-      wget -O $csi_controller_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/main/manifests/csi-controller.yaml
-      wget -O $csi_node_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/main/manifests/csi-node.yaml
+      wget -O $csi_driver_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/1.0.0/manifests/csi-driver.yaml
+      wget -O $csi_controller_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/1.0.0/manifests/csi-controller.yaml
+      wget -O $csi_node_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/1.0.0/manifests/csi-node.yaml
       kubectl apply -f $csi_driver_path
       kubectl apply -f $csi_controller_path
       kubectl apply -f $csi_node_path
