--- a/controllers/cluster_scripts/cloud_init_control_plane.yaml
+++ b/controllers/cluster_scripts/cloud_init_control_plane.yaml
@@ -61,16 +61,18 @@ write_files:
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeinit.status successful"
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cni.install.status in_progress"
-      antrea_path=/root/antrea-v0.11.3.yaml
-      wget -O $antrea_path https://github.com/vmware-tanzu/antrea/releases/download/v0.11.3/antrea.yml
+      antrea_version=%s
+      antrea_path=/root/antrea-v$antrea_version.yaml
+      wget -O $antrea_path https://github.com/vmware-tanzu/antrea/releases/download/v$antrea_version/antrea.yml
       # This does not need to be done from v0.12.0 onwards inclusive
-      sed -i 's/antrea\/antrea-ubuntu:v0.11.3/projects.registry.vmware.com\/antrea\/antrea-ubuntu:v0.11.3/g' $antrea_path
+      sed -i 's/antrea\/antrea-ubuntu:v$antrea_version/projects.registry.vmware.com\/antrea\/antrea-ubuntu:v$antrea_version/g' $antrea_path
       kubectl apply -f $antrea_path
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cni.install.status successful"
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cpi.install.status in_progress"
       kubectl apply -f $vcloud_basic_auth_path
-      wget -O $vcloud_configmap_path https://raw.githubusercontent.com/vmware/cloud-provider-for-cloud-director/main/manifests/vcloud-configmap.yaml
+      cpi_version=%s
+      wget -O $vcloud_configmap_path https://raw.githubusercontent.com/vmware/cloud-provider-for-cloud-director/$cpi_version/manifests/vcloud-configmap.yaml
       sed -i 's/VCD_HOST/"%s"/' $vcloud_configmap_path
       sed -i 's/ORG/"%s"/' $vcloud_configmap_path
       sed -i 's/OVDC/"%s"/' $vcloud_configmap_path
@@ -79,21 +81,22 @@ write_files:
       sed -i 's/VAPP/%s/' $vcloud_configmap_path
       sed -i 's/CLUSTER_ID/%s/' $vcloud_configmap_path
       kubectl apply -f $vcloud_configmap_path
-      wget -O $vcloud_ccm_path https://raw.githubusercontent.com/vmware/cloud-provider-for-cloud-director/main/manifests/cloud-director-ccm.yaml
+      wget -O $vcloud_ccm_path https://raw.githubusercontent.com/vmware/cloud-provider-for-cloud-director/$cpi_version/manifests/cloud-director-ccm.yaml
       kubectl apply -f $vcloud_ccm_path
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.cpi.install.status successful"
 
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubectl.csi.install.status in_progress"
-      wget -O $vcloud_csi_configmap_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/main/manifests/vcloud-csi-config.yaml
+      csi_version=%s
+      wget -O $vcloud_csi_configmap_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$csi_version/manifests/vcloud-csi-config.yaml
       sed -i 's/VCD_HOST/"%s"/' $vcloud_csi_configmap_path
       sed -i 's/ORG/"%s"/' $vcloud_csi_configmap_path
       sed -i 's/OVDC/"%s"/' $vcloud_csi_configmap_path
       sed -i 's/VAPP/%s/' $vcloud_csi_configmap_path
       sed -i 's/CLUSTER_ID/"%s"/' $vcloud_csi_configmap_path
       kubectl apply -f $vcloud_csi_configmap_path
-      wget -O $csi_driver_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/main/manifests/csi-driver.yaml
-      wget -O $csi_controller_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/main/manifests/csi-controller.yaml
-      wget -O $csi_node_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/main/manifests/csi-node.yaml
+      wget -O $csi_driver_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$csi_version/manifests/csi-driver.yaml
+      wget -O $csi_controller_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$csi_version/manifests/csi-controller.yaml
+      wget -O $csi_node_path https://raw.githubusercontent.com/vmware/cloud-director-named-disk-csi-driver/$csi_version/manifests/csi-node.yaml
       kubectl apply -f $csi_driver_path
       kubectl apply -f $csi_controller_path
       kubectl apply -f $csi_node_path
