--- a/testdata/config_test.yaml
+++ b/testdata/config_test.yaml
@@ -1,11 +1,11 @@
 vcd:
-  host: "https://vmc-vcloud-dhcp-169-27.eng.vmware.com"
-  org: "org1"
-  vdc: "ovdc1"
-  user: "clusterauthor1"
-  secret: "ca$hc0w"
-  network: "ovdc1_nw"
-  vipSubnet: "10.150.191.253/19"
+  host: VCD_HOST
+  org: ORG
+  vdc: OVDC
+  user: USER
+  secret: PASSWORD
+  network: NETWORK
+  vipSubnet: VIP_SUBNET_CIDR
 loadbalancer:
   oneArm:
     startIP: "192.168.8.2"
@@ -14,3 +14,8 @@ loadbalancer:
     http: 80
     https: 443
     tcp: 6443
+managementClusterRDEId: MANGEMENT_CLUSTER_RDE_ID
+clusterResourceSet:
+  csi: 1.0.0
+  cpi: 1.0.0
+  cni: 0.11.3
