--- a/controllers/cluster_scripts/cloud_init_control_plane.yaml
+++ b/controllers/cluster_scripts/cloud_init_control_plane.yaml
@@ -44,6 +44,7 @@ write_files:
       echo 'net.ipv6.conf.lo.disable_ipv6 = 1' >> /etc/sysctl.conf
       sudo sysctl -p
       # also remove ipv6 localhost entry from /etc/hosts
+      sed -i '/SystemdCgroup[ ]*=[ ]*true/d' /etc/containerd/config.toml || true
       sed -i 's/::1/127.0.0.1/g' /etc/hosts || true
     vmtoolsd --cmd "info-set guestinfo.postcustomization.networkconfiguration.status successful"
 
