reverted testing changes
Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -7,8 +7,8 @@ generatorOptions:
 secretGenerator:
   - name: vcloud-basic-auth
     literals:
-      - username=USER
-      - password=PASSWORD
+      - username=clusteradmin
+      - password=ca$hc0w
 
 configMapGenerator:
 - files:
