--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -7,8 +7,8 @@ generatorOptions:
 secretGenerator:
   - name: vcloud-basic-auth
     literals:
-      - username=clusteradmin
-      - password=ca$hc0w
+      - username=USER
+      - password=PASSWORD
 
 configMapGenerator:
 - files:
