--- a/testdata/config_test.yaml
+++ b/testdata/config_test.yaml
@@ -1,11 +1,11 @@
 vcd:
-  host: "https://bos1-vcloud-static-166-163.eng.vmware.com"
-  org: "org1"
-  vdc: "ovdc1"
-  user: "clusteradmin"
-  secret: "ca$hc0w"
-  network: "ovdc1_nw"
-  vipSubnet: "10.150.191.253/19"
+  host: VCD_HOST
+  org: ORG
+  vdc: OVDC
+  user: USER
+  secret: PASSWORD
+  network: NETWORK
+  vipSubnet: VIP_SUBNET_CIDR
 loadbalancer:
   oneArm:
     startIP: "192.168.8.2"
@@ -14,7 +14,7 @@ loadbalancer:
     http: 80
     https: 443
     tcp: 6443
-managementClusterRDEId: "urn:vcloud:entity:cse:nativeCluster:6f98610a-0d70-4c7d-81e5-ba3efd0b5203"
+managementClusterRDEId: MANGEMENT_CLUSTER_RDE_ID
 clusterResourceSet:
   csi: main
   cpi: main
