[VCDA-3173] Control plane join using join script (#23)
* changes to get Org

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* revert testing changes

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* reverted testing changes

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* reverted manager files

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* revert missing space

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* added clarifying comment

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* detailed comment and removed extra phase

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

--- a/testdata/config_test.yaml
+++ b/testdata/config_test.yaml
@@ -16,6 +16,6 @@ loadbalancer:
     tcp: 6443
 managementClusterRDEId: MANGEMENT_CLUSTER_RDE_ID
 clusterResourceSet:
-  csi: 1.0.0
-  cpi: 1.0.0
+  csi: main
+  cpi: main
   cni: 0.11.3
