--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -10,16 +10,16 @@ resources:
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_vcdmachines.yaml
-#- patches/webhook_in_vcdclusters.yaml
-#- patches/webhook_in_vcdmachinetemplates.yaml
+- patches/webhook_in_vcdmachines.yaml
+- patches/webhook_in_vcdclusters.yaml
+- patches/webhook_in_vcdmachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_vcdmachines.yaml
-#- patches/cainjection_in_vcdclusters.yaml
-#- patches/cainjection_in_vcdmachinetemplates.yaml
+- patches/cainjection_in_vcdmachines.yaml
+- patches/cainjection_in_vcdclusters.yaml
+- patches/cainjection_in_vcdmachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
