--- a/config/manager/controller_manager_config.yaml
+++ b/config/manager/controller_manager_config.yaml
@@ -12,8 +12,11 @@ loadbalancer:
     http: 80
     https: 443
     tcp: 6443
-managementClusterRDEId: MANGEMENT_CLUSTER_RDE_ID # RDE ID associated with the management cluster deployed from bootstrap cluster
+# managementClusterRDEId is the RDE ID of this management cluster if it exists; if this cluster is a child of another CAPVCD based cluster,
+# an associated RDE will be created in VCD of Entity Type "urn:vcloud:type:vmware:capvcdCluster:1.0.0".
+# Retrieve that RDEId using the API - https://VCD_IP/cloudapi/1.0.0/entities/types/vmware/capvcdCluster/1.0.0
+managementClusterRDEId: ""
 clusterResourceSet:
   csi: 1.1.0 # CSI version to be used in the workload cluster
   cpi: 1.1.0 # CPI version to be used in the workload cluster
-  cni: ANTREA_VERSION # Antrea version to be used in the workload cluster
+  cni: 0.11.3 # Antrea version to be used in the workload cluster
