--- a/config/manager/controller_manager_config.yaml
+++ b/config/manager/controller_manager_config.yaml
@@ -1,19 +1,22 @@
 vcd:
-  host: VCD_HOST
-  org: ORG
-  vdc: OVDC
-  network: NETWORK
-  vipSubnet: VIP_SUBNET_CIDR
+  host: VCD_HOST # VCD endpoint with the format https://VCD_HOST. No trailing '/'
+  org: ORG # organization name associated with the user logged in to deploy clusters
+  vdc: OVDC # VDC name where the cluster will be deployed
+  network: NETWORK # OVDC network to use for cluster deployment
+  vipSubnet: VIP_SUBNET_CIDR # Virtual IP CIDR for the external network
 loadbalancer:
   oneArm:
-    startIP: "192.168.8.2"
-    endIP: "192.168.8.100"
+    startIP: "192.168.8.2" # First IP in the IP range used for load balancer virtual service
+    endIP: "192.168.8.100" # Last IP in the IP range used for load balancer virtual service
   ports:
     http: 80
     https: 443
     tcp: 6443
-managementClusterRDEId: MANGEMENT_CLUSTER_RDE_ID
+# managementClusterRDEId is the RDE ID of this management cluster if it exists; if this cluster is a child of another CAPVCD based cluster,
+# an associated RDE will be created in VCD of Entity Type "urn:vcloud:type:vmware:capvcdCluster:1.0.0".
+# Retrieve that RDEId using the API - https://VCD_IP/cloudapi/1.0.0/entities/types/vmware/capvcdCluster/1.0.0
+managementClusterRDEId: ""
 clusterResourceSet:
-  csi: CSI_VERSION
-  cpi: CPI_VERSION
-  cni: ANTREA_VERSION
+  csi: 1.1.0 # CSI version to be used in the workload cluster
+  cpi: 1.1.0 # CPI version to be used in the workload cluster
+  cni: 0.11.3 # Antrea version to be used in the workload cluster
