--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -76,6 +76,8 @@ spec:
                 type: string
               rdeId:
                 type: string
+              r1Cluster:
+                type: boolean
               site:
                 type: string
               userContext:
