catching exit signal
Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

--- a/controllers/cluster_scripts/cloud_init_control_plane.yaml
+++ b/controllers/cluster_scripts/cloud_init_control_plane.yaml
@@ -34,7 +34,7 @@ write_files:
        vmtoolsd --cmd "info-set guestinfo.post_customization_cloud_init_output $cloud_init_output"
     }
     mkdir -p /var/log/capvcd/customization
-    trap 'catch $? $LINENO' ERR
+    trap 'catch $? $LINENO' ERR EXIT
     set -ex
     echo "$(date) Post Customization script execution in progress" &>> /var/log/capvcd/customization/status.log
     vcloud_basic_auth_path=/root/vcloud-basic-auth.yaml
