--- a/infrastructure-vcd/v0.5.1/cluster-template.yaml
+++ b/infrastructure-vcd/v0.5.1/cluster-template.yaml
@@ -2,7 +2,7 @@ apiVersion: cluster.x-k8s.io/v1alpha4
 kind: Cluster
 metadata:
   name: ${CLUSTER_NAME}
-  namespace: default
+  namespace: ${TARGET_NAMESPACE}
 spec:
   clusterNetwork:
     pods:
@@ -16,18 +16,18 @@ spec:
     apiVersion: controlplane.cluster.x-k8s.io/v1alpha4
     kind: KubeadmControlPlane
     name: ${CLUSTER_NAME}-control-plane # name of the KubeadmControlPlane object associated with the cluster.
-    namespace: default # kubernetes namespace in which the KubeadmControlPlane object reside. Should be the same namespace as that of the Cluster object
+    namespace: ${TARGET_NAMESPACE} # kubernetes namespace in which the KubeadmControlPlane object reside. Should be the same namespace as that of the Cluster object
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
     kind: VCDCluster
     name: ${CLUSTER_NAME} # name of the VCDCluster object associated with the cluster.
-    namespace: default # kubernetes namespace in which the VCDCluster object resides. Should be the same namespace as that of the Cluster object
+    namespace: ${TARGET_NAMESPACE} # kubernetes namespace in which the VCDCluster object resides. Should be the same namespace as that of the Cluster object
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDCluster
 metadata:
   name: ${CLUSTER_NAME}
-  namespace: default
+  namespace: ${TARGET_NAMESPACE}
 spec:
   site: ${VCD_SITE} # VCD endpoint with the format https://VCD_HOST. No trailing '/'
   org: ${VCD_ORGANIZATION} # VCD organization name where the cluster should be deployed
@@ -42,7 +42,7 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDMachineTemplate
 metadata:
   name: ${CLUSTER_NAME}-control-plane
-  namespace: default
+  namespace: ${TARGET_NAMESPACE}
 spec:
   template:
     spec:
@@ -54,7 +54,7 @@ apiVersion: controlplane.cluster.x-k8s.io/v1alpha4
 kind: KubeadmControlPlane
 metadata:
   name: ${CLUSTER_NAME}-control-plane
-  namespace: default
+  namespace: ${TARGET_NAMESPACE}
 spec:
   kubeadmConfigSpec:
     clusterConfiguration:
@@ -94,7 +94,7 @@ spec:
       apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
       kind: VCDMachineTemplate
       name: ${CLUSTER_NAME}-control-plane # name of the VCDMachineTemplate object used to deploy control plane VMs. Should be the same name as that of KubeadmControlPlane object
-      namespace: default # kubernetes namespace of the VCDMachineTemplate object. Should be the same namespace as that of the Cluster object
+      namespace: ${TARGET_NAMESPACE} # kubernetes namespace of the VCDMachineTemplate object. Should be the same namespace as that of the Cluster object
   replicas: ${CONTROL_PLANE_MACHINE_COUNT} # desired number of control plane nodes for the cluster
   version: ${KUBERNETES_VERSION} # Kubernetes version to be used to create (or) upgrade the control plane nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
 ---
@@ -102,7 +102,7 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDMachineTemplate
 metadata:
   name: ${CLUSTER_NAME}-md0
-  namespace: default
+  namespace: ${TARGET_NAMESPACE}
 spec:
   template:
     spec:
@@ -114,7 +114,7 @@ apiVersion: bootstrap.cluster.x-k8s.io/v1alpha4
 kind: KubeadmConfigTemplate
 metadata:
   name: ${CLUSTER_NAME}-md0
-  namespace: default
+  namespace: ${TARGET_NAMESPACE}
 spec:
   template:
     spec:
@@ -133,7 +133,7 @@ apiVersion: cluster.x-k8s.io/v1alpha4
 kind: MachineDeployment
 metadata:
   name: ${CLUSTER_NAME}-md0
-  namespace: default
+  namespace: ${TARGET_NAMESPACE}
 spec:
   clusterName: ${CLUSTER_NAME} # name of the Cluster object
   replicas: ${WORKER_MACHINE_COUNT} # desired number of worker nodes for the cluster
@@ -146,11 +146,11 @@ spec:
           apiVersion: bootstrap.cluster.x-k8s.io/v1alpha4
           kind: KubeadmConfigTemplate
           name: ${CLUSTER_NAME}-md0 # name of the KubeadmConfigTemplate object
-          namespace: default # kubernetes namespace of the KubeadmConfigTemplate object. Should be the same namespace as that of the Cluster object
+          namespace: ${TARGET_NAMESPACE} # kubernetes namespace of the KubeadmConfigTemplate object. Should be the same namespace as that of the Cluster object
       clusterName: ${CLUSTER_NAME} # name of the Cluster object
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
         kind: VCDMachineTemplate
         name: ${CLUSTER_NAME}-md0 # name of the VCDMachineTemplate object used to deploy worker nodes
-        namespace: default # kubernetes namespace of the VCDMachineTemplate object used to deploy worker nodes
+        namespace: ${TARGET_NAMESPACE} # kubernetes namespace of the VCDMachineTemplate object used to deploy worker nodes
       version: ${KUBERNETES_VERSION} # Kubernetes version to be used to create (or) upgrade the worker nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
