--- a/infrastructure-vcd/v0.5.1/clusterctl.yaml
+++ b/infrastructure-vcd/v0.5.1/clusterctl.yaml
@@ -29,7 +29,7 @@ VCD_ORGANIZATION_VDC_NETWORK: "test_ovdc_nw"
 VCD_CATALOG: "test_catalog"
 VCD_CONTROL_PLANE_SIZING_POLICY: "large_4core16gb"
 VCD_WORKER_SIZING_POLICY: "medium_2core8gb"
-VCD_VIP_CIDR: 10.150.191.253/19
+VCD_VIP_CIDR: 10.X.X.X/19
 
 # VCD credentials
 VCD_USERNAME: "vcduser"
