Initial commit to automatically install default storage class in workload cluster
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -52,6 +52,21 @@ spec:
                 type: object
               defaultComputePolicy:
                 type: string
+              defaultStorageClassOptions:
+                properties:
+                  VCDStorageProfile:
+                    type: string
+                  enableDefaultStorageClass:
+                    type: boolean
+                  fileSystemFormat:
+                    type: string
+                  reclaimPolicy:
+                    type: string
+                  storageClassName:
+                    type: string
+                required:
+                - enableDefaultStorageClass
+                type: object
               org:
                 type: string
               ovdc:
