Default storage class parameter changes
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -54,18 +54,19 @@ spec:
                 type: string
               defaultStorageClassOptions:
                 properties:
-                  VCDStorageProfile:
-                    type: string
-                  enableDefaultStorageClass:
-                    type: boolean
                   fileSystemFormat:
                     type: string
-                  reclaimPolicy:
+                  k8sStorageClassName:
                     type: string
-                  storageClassName:
+                  useDeleteReclaimPolicy:
+                    type: boolean
+                  vcdStorageProfileName:
                     type: string
                 required:
-                - enableDefaultStorageClass
+                - fileSystemFormat
+                - k8sStorageClassName
+                - useDeleteReclaimPolicy
+                - vcdStorageProfileName
                 type: object
               org:
                 type: string
